8204615: [lworld] C2 support for java.lang.Object methods on value types
Reviewed-by: roland